--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,56 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Blog</title>
-    <%= csrf_meta_tags %>
+<head>
+  <title>Blog</title>
+  <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-  <body>
+<body data-target=".navbar">
 
-  	<h1>Hello</h1>
-    <%= yield %>
-  </body>
+	<!-- NAVBAR -->
+  <nav class="navbar navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+      
+      <div class="navbar-header">
+        <button type="button"
+                class="navbar-toggle"
+                data-toggle="collapse"
+                data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        
+        <%= link_to image_tag("bee_nav_logo.png"), '../static_pages/index', :id => "logo" %>
+      
+      </div> <!--end navbar-header -->
+
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to "Profile", '#' %></li>
+          
+        </ul>
+      </div> <!-- END navbar-collapse -->
+    
+    </div> <!-- END container-fluid -->
+  </nav>
+  <!-- end NAVBAR -->
+
+  <!-- MAIN CONTENT -->
+  <%= yield %>
+  <!-- end MAIN CONTENT -->
+
+
+  <!-- FOOTER -->
+  <footer>
+    <div  id="copyright">
+      <a href="http://physiotherapist-dog-70104.bitballoon.com/"><p>&copy; Jake Hill 2017</p></a>
+    </div>
+  </footer>
+  <!-- end FOOTER -->
+</body>
 </html>
