--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -47,3 +47,56 @@
 	clear: both;
 }
 
+
+// NEW
+.post-content {
+	width: 80%;
+	float: left;
+	textarea {
+		width: 100%;
+		height: 350px;
+	}
+}
+
+.post-options {
+	margin-top: 50px;
+	width: 20%;
+	float: right;
+	.glyphicon {
+		top: unset;
+		font-size: 25px;
+		display: inline-block;
+		margin: 20px 10px;
+		float: left;
+		clear: both;
+		&:hover {
+			color: white;
+			cursor: pointer;
+		}
+	}
+	.field {
+    display: inline-block;		
+		margin: 9px 10px;
+		position: relative;
+		width: 100%;
+		.glyphicon {
+			position: absolute;
+			right: 0;
+			top: 0;
+			font-size: 10px;
+			margin: 0;
+			float: unset;
+			clear: unset;
+		}
+		input {
+			width: 90%;
+		}
+	}
+	.field:first-of-type{
+		padding-bottom: 3px;
+	}
+}
+
+.post-submit {
+	clear: both;
+}
