validate presence of title, author and content of post

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -97,6 +97,13 @@
 	}
 }
 
+.post-title,
+.post-author {
+	display: inline-block;
+	float: left;
+	margin-right: 20px;
+}
+
 .post-submit {
 	clear: both;
 }
