--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,9 +11,13 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field post-title">
     <%= f.label :title %>
     <%= f.text_field :title %>
+  </div>
+  <div class="field post-author">
+    <%= f.label :author %>
+    <%= f.text_field :author %>
   </div>
   <div class="field post-content">
     <%= f.label :content %>
