--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for :post_id, @post.id.to_s %>
 <p id="notice"><%= notice %></p>
 
 <div class="post show-post">
@@ -24,6 +25,28 @@
     <p>Dislikes: <%= @post.dislikes %></p>
   </div>  
 </div>
+
+<div class="post_comments">
+  <h5><strong>Comments</strong></h5>
+    <%= render "comments/form", comment: @comment %>
+    <% if @post.comments.exists? %>
+      <% if @post.comments.length > 1 %>
+        <% @post.comments.each do |comment| %>
+          <div class="post_comment">
+            <p class="post_comment_author"><%= comment.author[0, 1] %></p>
+            <p class="post_comment_content"><%= comment.content %></p>
+          </div>  
+        <% end %>
+      <% else %>
+        <div class="post_comment no-border">
+          <p class="post_comment_author"><%= @post.comments.first.author[0, 1] %></p>
+          <p class="post_comment_content"><%= @post.comments.first.content %></p>
+        </div> 
+      <% end %>
+    <% else %>
+      <p>Currently No Comments</p>
+    <% end %>
+</div> 
 
 
 <div class="post_options">
