--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -6,8 +6,9 @@
 	display: none;
 }
 
-.no-border {
+.single_comment {
 	border: none !important;
+	margin-bottom: 0 !important;
 }
 
 .post,
@@ -28,7 +29,7 @@
 .post_comment {
 	margin-left: 50px;
 	margin-right: 0;
-	overflow: auto;
+	margin-bottom: 20px;
 	min-height: 50px;
 	border-bottom: 1px dotted lightgray;
 	clear: both;
