revert back to before the craziness of gmaps

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -6,9 +6,8 @@
 	display: none;
 }
 
-.single_comment {
+.no-border {
 	border: none !important;
-	margin-bottom: 0 !important;
 }
 
 .post,
@@ -29,7 +28,7 @@
 .post_comment {
 	margin-left: 50px;
 	margin-right: 0;
-	margin-bottom: 20px;
+	overflow: auto;
 	min-height: 50px;
 	border-bottom: 1px dotted lightgray;
 	clear: both;
