--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,6 @@
 <html>
 <head>
   <title>Blog</title>
-  <script async defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -11,8 +9,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= csrf_meta_tags %>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCA4KGv5O7QWLr9zwsV9QLwG-Y4BoCkSmc&callback=initMap"
-  type="text/javascript"></script>
+ <!--  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCA4KGv5O7QWLr9zwsV9QLwG-Y4BoCkSmc&callback=initMap"
+  type="text/javascript"></script> -->
 </head>
 
 <body data-target=".navbar">
