--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -36,7 +36,7 @@
     <div class="field hidden">
       <span class="glyphicon glyphicon-remove hidden"></span>
       <%= f.label :location %>
-      <%= f.text_field :location, :input_html =>{:id => 'gmaps-input-address'}, :placeholder => 'Start typing a place name...' %>
+      <%= f.text_field :location %>
     </div>  
 
     <span class="glyphicon glyphicon-camera" aria-hidden="true"></span>
