--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,14 @@
 <html>
 <head>
   <title>Blog</title>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= csrf_meta_tags %>
- <!--  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCA4KGv5O7QWLr9zwsV9QLwG-Y4BoCkSmc&callback=initMap"
+  <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCA4KGv5O7QWLr9zwsV9QLwG-Y4BoCkSmc&callback=initMap"
   type="text/javascript"></script> -->
 </head>
 
