add autocomplete feature to posts location field

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= csrf_meta_tags %>
-  <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCA4KGv5O7QWLr9zwsV9QLwG-Y4BoCkSmc&callback=initMap"
-  type="text/javascript"></script> -->
 </head>
 
 <body data-target=".navbar">
@@ -63,5 +61,6 @@
     </div>
   </footer>
   <!-- end FOOTER -->
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCA4KGv5O7QWLr9zwsV9QLwG-Y4BoCkSmc&libraries=places&callback=initAutocomplete" async defer></script>
 </body>
 </html>
