--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,24 @@
-<p id="notice"><%= notice %></p>
+<!-- <p id="notice"><%= notice %></p> -->
 
 <h1>Posts</h1>
   <% if @posts.exists? %>
+    <%#  newestPosts = @posts.reverse 
+        oldestPosts = @posts 
+        oldestEvents = @posts.sort_by{|post| post[:date_of_event]}
+        newestEvents = oldestEvents.reverse 
+    %>
+
+    <li class="dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sort By<b class="caret"></b></a>
+      <ul class="dropdown-menu">
+        <!-- We are passing the sort parameter here -->
+        <li><a href="?sort=1">Newest(Submitted)</a></li>
+        <li><a href="?sort=2">Oldest(Submitted)</a></li>
+        <li><a href="?sort=3">Newest(Event)</a></li>
+        <li><a href="?sort=4">Oldest(Event)</a></li>
+      </ul>
+    </li>
+    
     <% @posts.each do |post| %>
       <div class="post">
         <p class="post_author"><%= post.author[0, 1] %></p>
@@ -28,8 +45,8 @@
         <h5><strong>Comments</strong></h5>
         <% if post.comments.exists? %>
           <div class="post_comment no-border">
-            <p class="post_comment_author"><%= post.comments.first.author[0, 1] %></p>
-            <p class="post_comment_content"><%= post.comments.first.content %></p>
+            <p class="post_comment_author"><%= post.comments.last.author[0, 1] %></p>
+            <p class="post_comment_content"><%= post.comments.last.content %></p>
             <p class="post_comment_see_more"><%= link_to 'See More', post %></p>
           </div>  
         <% else %>
