--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :post_id, @post.id.to_s %>
-<p id="notice"><%= notice %></p>
+<!-- <p id="notice"><%= notice %></p> -->
 
 <div class="post show-post">
   <h3 class="post-title">
@@ -16,7 +16,7 @@
   </p>
 
   <div class="post_data">
-    <p><%= @post.date_of_event %>, <%= @post.location %></p>  
+    <p><%= @post.location %>, <%= @post.date_of_event %> </p>  
   </div>
 
 
@@ -31,7 +31,7 @@
     <%= render "comments/form", comment: @comment %>
     <% if @post.comments.exists? %>
       <% if @post.comments.length > 1 %>
-        <% @post.comments.each do |comment| %>
+        <% @post.comments.reverse.each do |comment| %>
           <div class="post_comment">
             <p class="post_comment_author"><%= comment.author[0, 1] %></p>
             <p class="post_comment_content"><%= comment.content %></p>
