--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,24 +1,13 @@
-<!-- <p id="notice"><%= notice %></p> -->
-
 <h1>Posts</h1>
-  <% if @posts.exists? %>
-    
-
-    <!-- Been trying to figure out how to sort for a billion years.
-    Omar has said it will come up in the next exercises so I shouldn't do it now. -->
-    <%  @newestPosts = Post.all.reverse 
-        @oldestPosts = Post.all 
-        @oldestEvents = Post.all.sort_by{|post| post[:date_of_event]}
-        @newestEvents = @oldestEvents.reverse 
-    %>
+  <% if Post.exists? %>
 
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sort By<b class="caret"></b></a>
       <ul class="dropdown-menu">
-        <li><%= link_to "Newest(Submitted)", posts_path(@newestPosts) %></li>
-        <li><%= link_to "Oldest(Submitted)", posts_path(@oldestPosts) %></li>
-        <li><%= link_to "Newest(Event)", posts_path(@newestEvents) %></li>
-        <li><%= link_to "Oldest(Event)", posts_path(@oldestEvents) %></li>
+        <li><%= link_to "Newest(Submitted)", posts_path(order: "newSub") %></li>
+        <li><%= link_to "Oldest(Submitted)", posts_path %></li>
+        <li><%= link_to "Newest(Event)", posts_path(order: "newEv") %></li>
+        <li><%= link_to "Oldest(Event)", posts_path(order: "oldEv") %></li>
       </ul>
     </li>
     
@@ -34,14 +23,7 @@
           <p>Likes: <%= post.likes %></p>
           <p>Dislikes: <%= post.dislikes %></p>
         </div>
-        
-<!--         <div class="post_options">
-          <p><%#= link_to 'Edit', edit_post_path(post) %></p>
-          <p><%#= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></p>
-        </div> -->
-        
 
-        
       </div>
       <div class="post_comments">
         <h5><strong>Comments</strong></h5>
