--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(comment) do |f| %>
+<%= form_for @comment, :url => post_comments_path(@post) do |f| %>
   <% if comment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
@@ -18,16 +18,6 @@
   
   <div class="actions post_create_comment_submit">
     <%= f.submit %>
-  </div>
-  
-  <div class="field post_create_comment_author">
-    <%= f.label :author, class: "hidden" %>
-    <%= f.text_field :author, placeholder: "Your Name..."%>
-  </div>
-
-  <div class="field hidden">
-    <%= f.label :post_id %>
-    <%= f.number_field :post_id, :value => yield(:post_id).to_i %>
   </div>
 
   <div class="field hidden">
