--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -17,7 +17,7 @@
   <tbody>
     <% @comments.each do |comment| %>
       <tr>
-        <td><%= comment.author %></td>
+        <td><%= comment.user_id %></td>
         <td><%= comment.content %></td>
         <td><%= comment.post_id %></td>
         <td><%= comment.likes %></td>
