--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,20 @@
         	<li><%= button_to "New Post", new_post_path, {method: "get", :class => "btn btn-success"} %></li>
         	<li><%= link_to "Notifications", '#' %></li>
         	<li><%= link_to "Messages", '#' %></li>
-          <li><%= link_to "Profile", '#' %></li>
+          <li>
+          <% if user_signed_in? %>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            Account <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Profile",  current_user %></li>
+              <li><%= link_to "Settings", edit_user_registration_path(current_user) %></li>
+              <li class="divider"></li>
+              <li><%= link_to "Logout",  destroy_user_session_path, method: :delete %></li>
+            </ul>
+          <% else %>
+            <%= link_to("Login", new_user_session_path) %>
+          <% end %>
+          </li>
           
         </ul>
       </div> <!-- END navbar-collapse -->
@@ -48,6 +61,8 @@
   <!-- end NAVBAR -->
 
   <!-- MAIN CONTENT -->
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
   <div class="container">
   	<%= yield %>
   </div>
