--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,7 +13,7 @@
     
     <% @posts.each do |post| %>
       <div class="post">
-        <p class="post_author"><%= post.author[0, 1] %></p>
+        <p class="post_author"><%= post.user_id %></p>
         <h3 class="post_title"><%= link_to post.title, post %></h3>
         
         <p class="post_content"><%= post.content %></p>
@@ -29,7 +29,7 @@
         <h5><strong>Comments</strong></h5>
         <% if post.comments.exists? %>
           <div class="post_comment no-border">
-            <p class="post_comment_author"><%= post.comments.last.author[0, 1] %></p>
+            <p class="post_comment_author"><%= post.comments.last.user_id %></p>
             <p class="post_comment_content"><%= post.comments.last.content %></p>
             <p class="post_comment_see_more"><%= link_to 'See More', post %></p>
           </div>  
