--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,7 @@
 
   <p class="show-post-author">
     by: 
-    <em><%= @post.user_id %></em>
+    <em><%= @post.user.first_name %></em>
   </p>
 
   <p class="show-post-content">
@@ -33,13 +33,13 @@
       <% if @post.comments.length > 1 %>
         <% @post.comments.reverse.each do |comment| %>
           <div class="post_comment">
-            <p class="post_comment_author"><%= comment.user_id %></p>
+            <p class="post_comment_author"><%= comment.user.first_name[0, 1] %></p>
             <p class="post_comment_content"><%= comment.content %></p>
           </div>  
         <% end %>
       <% else %>
         <div class="post_comment no-border">
-          <p class="post_comment_author"><%= @post.comments.first.user_id %></p>
+          <p class="post_comment_author"><%= @post.comments.first.user.first_name[0, 1] %></p>
           <p class="post_comment_content"><%= @post.comments.first.content %></p>
         </div> 
       <% end %>
@@ -50,7 +50,9 @@
 
 
 <div class="post_options">
-  <%= link_to 'Edit', edit_post_path(@post) %> |
-  <%= link_to 'Back', posts_path %>  
+  <% if current_user.id == @post.user_id %>
+    <%= link_to 'Edit', edit_post_path(@post) %> |
+  <% end %>
+  <%= link_to 'Back', posts_path %>
 </div>
 
