--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,13 +1,24 @@
 body {
-  background-color: #c7d7c7;
-  color: #333;
+  background-color: white;
+
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
 
+h1 {
+  color: #600;
+  font-family: "Merriweather", serif;
+}
+
+p {
+  color: #000;
+}
+
 .container {
-  margin-top: 40px;
+  margin-top: 60px;
+  min-height: 600px;
+  padding: 0;
 }
 
 p, ol, ul, td {
@@ -93,7 +104,7 @@ label {
 /* NAVIGATION */
 
 nav {
-  background-color: #540000;
+  background-color: #600;
   .navbar-header {
     margin-top: 5px;
     a:hover {
