--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
-<p id="notice"><%= notice %></p>
+<p>
+	<%= image_tag @user.image.url %>
+</p>
 
 <p>
   <strong>First name:</strong>
@@ -9,6 +11,3 @@
   <strong>Last name:</strong>
   <%= @user.last_name %>
 </p>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
