--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
 	<!-- NAVBAR -->
   <nav class="navbar navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
+    <div class="container-fluid nav-container">
       
       <div class="navbar-header">
         <button type="button"
