change name from Travelog to World Stories (due to name being taken on heroku)

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,7 +1,7 @@
 <%= image_tag("blog_banner.jpg", id: "banner") %>
 
 <div class="welcome_page">
-	<h1>Welcome to Travelog</h1>
+	<h1>Welcome to World Stories</h1>
 	<p>Come and join our growing community of traveling writers, see what the world has to offer and take part yourself!</p>
 
 	
